Redirect to heroku

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body>
-Hello world
-</body>
+  <script>
+      window.location = "https://website-lwmvastgoed.herokuapp.com/";
+  </script>
 </html>
