Redirect to www

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <script>
-      window.location = "https://website-lwmvastgoed.herokuapp.com/";
+      window.location = "http://www.lwmvastgoed.nl";
   </script>
 </html>
